--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,32 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light {
+    --font: 'Inter-Variable', sans-serif;
+    --accent-font: 'PressStart2P-Regular';
+    --text-weight: 400;
+    --title-weight: 700;
+    --bg-color: #FFF;
+    --accent-color: #000;
+}
+
+:root.theme-dark {
+    --font: 'Inter-Variable', sans-serif;
+    --accent-font: 'PressStart2P-Regular';
+    --text-weight: 465;
+    --title-weight: 785;
+    --bg-color: #000;
+    --accent-color: #00CC14;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --font: 'Inter-Variable', sans-serif;
+        --accent-font: 'PressStart2P-Regular';
+        --text-weight: 465;
+        --title-weight: 785;
+        --bg-color: #000;
+        --accent-color: #00CC14;
+    }
+}
