--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,9 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+    --font: 'Inter-Variable', sans-serif;
+    --accent-font: 'PressStart2P-Regular';
+    --text-weight: 400;
+    --title-weight: 700;
+    --bg-color: #FFF;
+    --accent-color: #000;
+}
