--- a/styles/style.css
+++ b/styles/style.css
@@ -17,12 +17,417 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-style: var(--font);
+  font-family: var(--font);
+  font-size: 18px;
+  color: var(--accent-color);
   font-variation-settings: 'wght' 400;
   background-color: var(--bg-color);
   background-image: 
-                    repeating-linear-gradient(90deg, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-                    repeating-linear-gradient(#E7E7E7, #E7E7E7 2px, #1A1A1A 2px, #1A1A1A 4px);
-  /* background-position: top; */
+    repeating-linear-gradient(0deg, var(--gr-color) 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(90deg, var(--gr-color) 0 2px, transparent 2px 4px),
+    linear-gradient( var(--gr-color-medium) 0%, var(--gr-color-medium) 0.1%, var(--gr-color-dark) 100% );
   background-size: cover;
+}
+
+.header,
+.main,
+.footer {
+  margin-inline: clamp(0rem, -8.1866rem + 34.9296vw, 23.25rem);
+}
+
+.header {
+  margin-block: 102px 104px;
+  font-family: var(--accent-font);
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+}
+
+.page__title {
+  margin-block-start: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem);
+  margin-block-end: 20px;
+  text-align: center;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+}
+
+.header__title {
+  text-align: center;
+  margin-block-end: 25px;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 14px;
+  margin-inline-start: clamp(9.625rem, 6.0819rem + 15.1174vw, 19.6875rem);
+  margin-inline-end: clamp(8.3125rem, 4.7033rem + 15.3991vw, 18.5625rem);
+  margin-block-end: 25px;
+}
+
+.theme-menu__button {
+  position: relative;
+  display: flex;
+  border: none;
+  background-color: transparent;
+  text-transform: uppercase;
+  font-size: clamp(0.875rem, 0.875rem + 0vw, 0.875rem);
+}
+
+.theme-menu__button:disabled::before {
+  content: '▶️';
+  display: block;
+  inline-size: 16px;
+  block-size: 13px;
+  margin-inline-start: -18px;
+  animation: active-button 0.5s infinite ease-in-out reverse;
+}
+
+@keyframes active-button {
+  from {
+    translate: 0;
+  }
+  to {
+    translate: 4px;
+  }
+}
+
+.theme-menu__button:hover,  
+.theme-menu__button:disabled
+{
+  opacity: 0.6;
+  transition: 0.3s ease;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button::after {
+  position:absolute;
+  bottom: -2px;
+  content: " ";
+  border-bottom: 2px solid var(--accent-color);
+  transform: scale(0);
+  inline-size: 100%;
+  transition: transform 0.3s ease;
+  transform-origin: left center;
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scale(1);
+  opacity: 0.6;
+}
+
+.theme-menu__button:disabled {
+  pointer-events: none;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.card {
+  position: relative;
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+}
+
+.card__title {
+  font-variation-settings: 'wght' var(--title-weight);
+  font-weight: var(--title-weight);
+  font-size: 18px;
+  margin-inline-start: 10px;
+  margin-block-end: 8px;
+}
+
+.card__picture {
+  position: relative;
+  inline-size: clamp(23.1875rem, 16.0352rem + 30.5164vw, 43.5rem);
+  block-size: clamp(23.1875rem, 16.0352rem + 30.5164vw, 43.5rem);
+  z-index: 0;
+}
+
+.card__label {
+  display: flex;
+  justify-content: end;
+  padding-block-start: 23px;
+  padding-inline-end: 11px;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  mix-blend-mode: hard-light;
+  opacity: 0.5;
+  text-shadow: -1px 0 var(--color-shadow), 0 1px var(--color-shadow), 1px 0 var(--color-shadow), 0 -1px var(--color-shadow);
+}
+
+@supports((text-stroke: 1px var(--color-shadow)) or (-webkit-text-stroke: 1px var(--color-shadow))) {
+  .card__label {
+      -webkit-text-stroke: 1px var(--color-shadow);
+      text-stroke: 1px var(--color-shadow);
+      text-shadow: none;
+  }
+}
+
+.card__image {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  inline-size: 100%;
+  object-fit: contain;
+  object-position: center;
+  vertical-align: bottom;
+}
+
+.filter_contrast {
+  filter: contrast(150%);
+}
+
+.card__container {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-inline: 25px;
+  margin-block: 25px;
+  font-size: 18px;
+}
+
+.filter_sepia {
+  filter: sepia(1.1);
+}
+
+.filter_invert {
+  filter: invert(90%);
+}
+
+.filter_saturate {
+  filter: saturate(120%);
+}
+
+.filter_blur {
+  filter: blur(2px);
+}
+
+.filter_grayscale {
+  filter: grayscale(80%);
+}
+
+.filter_saturate_contrast {
+  filter: saturate(150%) contrast(120%);
+}
+
+.card__button {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  justify-content: end;
+}
+
+.card__icon-button {
+  block-size: 38px;
+  inline-size: 38px;
+  border: transparent;
+  background-color: transparent;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color);
+  transition: 0.3s ease;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.like-icon:hover .core {
+  fill: var(--color-heart);
+  transition: fill 0.3s;
+
+}
+
+.like-icon:hover .main-body {
+  fill: var(--color-heart);
+  transition: fill 0.3s 0.03s;
+}
+
+.like-icon:active .core {
+  fill: var(--bg-heart);
+  transition: fill 0.3s;
+}
+
+.like-icon:active .main-body {
+  fill: var(--bg-heart);
+  transition: fill 0.3s 0.03s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--bg-heart);
+  transition: fill 0.3s;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--bg-heart);
+  transition: fill 0.3s 0.03s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--bg-heart);
+  transition: fill 0.3s 0.06s;
+}
+
+.like-icon .contour {
+  fill: var(--color-heart);
+  transition: fill 0.1s linear;
+}
+
+.like-icon.is-liked .heart {
+  animation: like 0.3s ease-in alternate 0.1s;
+  transform-origin: center;
+}
+
+@keyframes like {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.5);
+  }
+}
+
+.like-icon.is-liked .sparks {
+  animation: non-opacity 0.3s ease-in alternate 0.3s;
+}
+
+@keyframes non-opacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.button {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+  overflow: hidden;
+}
+
+.button:focus {
+  outline: none;
+  transition: 0.3s ease;
+  box-shadow: 2px 2px 0 0 var(--accent-color);
+}
+
+.button::after {
+  content: '';
+  position: absolute;
+  display: block;
+  inline-size: 100%;
+  block-size: 100%;
+  background-color: var(--accent-color);
+  transition: transform 0.5s ease-in-out;
+  transform: translate(-100%);
+}
+
+.button:hover::after {
+  transform: translate(0);
+}
+
+.card__like-button {
+  inline-size: 130px;
+  block-size: 38px;
+  padding: 9px 17px;
+  gap: 10px;
+}
+
+.button__text {
+  position: relative;
+  z-index: 1;
+  font-family: var(--accent-font);
+  font-size: 14px;
+  color: var(--color-text);
+  mix-blend-mode: difference;
+}
+
+.footer__button {
+  gap: 8px;
+  inline-size: clamp(19.125rem, 18.4868rem + 2.723vw, 20.9375rem);
+  block-size: 51px;
+  margin-inline: auto;
+  margin-block: 54px 105px;
+}
+
+.floppy {
+  position: relative;
+  inline-size: 21px;
+  block-size: 21px;
+  z-index: 1;
+  mix-blend-mode: difference;
+  fill: var(--color-floppy);
+}
+
+.dialog {
+  position: fixed;
+  background-color: var(--bg-color);
+  border: 2px solid var(--accent-color);
+  text-transform: uppercase;
+  line-height: 150%;
+  padding: 32px 42px;
+  inline-size: 341px;
+  block-size: 195px;
+}
+
+.dialog::backdrop {
+  background-color: #000;
+  opacity: 0.75;
+}
+
+.dialog__button {
+  inline-size: 257px;
+  block-size: 38px;
+  padding: 9px 17px;
+  gap: 10px;
+  color: var(--accent-color);
+  grid-column: span 2;
+ 
+}
+
+.dialog[open] {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-template-rows: 1fr min-content;
+  row-gap: 30px;
+  column-gap: 20px;
+}
+
+.dialog .floppy  {
+  inline-size: 39px;
+  block-size: 39px;
+  align-self: center;
+}
+
+@media (width <= 768px) {
+
+  .footer__button {
+    flex-direction: column;
+    block-size: 80px;
+  }
+
+  .floppy {
+    inline-size: 28px;
+    block-size: 28px;
+  }
 }
