--- a/styles/themes.css
+++ b/styles/themes.css
@@ -7,11 +7,19 @@
 
 :root.theme-light {
     --font: 'Inter-Variable', sans-serif;
-    --accent-font: 'PressStart2P-Regular';
+    --accent-font: 'PressStart2P-Regular', sans-serif;
     --text-weight: 400;
     --title-weight: 700;
     --bg-color: #FFF;
+    --gr-color: #d3d3d3;
+    --gr-color-medium: #e7e7e7;
+    --gr-color-dark: #1a1a1a;
     --accent-color: #000;
+    --color-shadow: #E7E7E7;
+    --color-text: #FFF;
+    --color-heart: #000;
+    --bg-heart: #FF0000;
+    --color-floppy: #FFF;
 }
 
 :root.theme-dark {
@@ -20,7 +28,15 @@
     --text-weight: 465;
     --title-weight: 785;
     --bg-color: #000;
+    --gr-color: #000;
+    --gr-color-medium: #007f0c;
+    --gr-color-dark: #004306;
     --accent-color: #00CC14;
+    --color-shadow: #000;
+    --color-text: #00CC14;
+    --color-heart: #00CC14;
+    --color-floppy: #00CC14;
+
 }
 
 @media (prefers-color-scheme: dark) {
@@ -30,6 +46,13 @@
         --text-weight: 465;
         --title-weight: 785;
         --bg-color: #000;
+        --gr-color: #000;
+        --gr-color-medium: #007f0c;
+        --gr-color-dark: #004306;
         --accent-color: #00CC14;
+        --color-shadow: #000;
+        --color-text: #00CC14;
+        --color-heart: #00CC14;
+        --color-floppy: #00CC14;
     }
 }
