--- a/styles/style.css
+++ b/styles/style.css
@@ -42,17 +42,19 @@
   border: 2px solid var(--accent-color);
 }
 
-.page__title {
-  margin-block-start: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem);
-  margin-block-end: 20px;
+.page__logo {
+  display: block;
+  margin: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem) auto 20px;
   text-align: center;
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  text-decoration: none;
 }
 
 .header__title {
   text-align: center;
   margin-block-end: 25px;
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-transform: uppercase;
 }
 
 .theme-menu__list {
@@ -80,10 +82,10 @@
   inline-size: 16px;
   block-size: 13px;
   margin-inline-start: -18px;
-  animation: active-button 0.5s infinite ease-in-out reverse;
+  animation: slideInFromLeft 0.5s infinite ease-in-out reverse;
 }
 
-@keyframes active-button {
+@keyframes slideInFromLeft {
   from {
     translate: 0;
   }
@@ -141,21 +143,30 @@
   font-weight: var(--title-weight);
   font-size: 18px;
   margin-inline-start: 10px;
-  margin-block-end: 8px;
+  margin-block-end: 5px;
 }
 
 .card__picture {
-  position: relative;
+  display: flex;
   inline-size: clamp(23.1875rem, 16.0352rem + 30.5164vw, 43.5rem);
   block-size: clamp(23.1875rem, 16.0352rem + 30.5164vw, 43.5rem);
   z-index: 0;
 }
 
+.card__image {
+  position: relative;
+  inline-size: 100%;
+  object-fit: contain;
+  object-position: center;
+  vertical-align: bottom;
+}
+
 .card__label {
-  display: flex;
-  justify-content: end;
-  padding-block-start: 23px;
-  padding-inline-end: 11px;
+  position: absolute;
+  justify-self: end;
+  right: 0;
+  padding-block-start: 25px;
+  padding-inline-end: clamp(0.6875rem, 0.3794rem + 1.3146vw, 1.5625rem);
   font-family: var(--accent-font);
   font-size: 14px;
   mix-blend-mode: hard-light;
@@ -171,57 +182,48 @@
   }
 }
 
-.card__image {
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  inline-size: 100%;
-  object-fit: contain;
-  object-position: center;
-  vertical-align: bottom;
-}
-
-.filter_contrast {
+.filter__contrast {
   filter: contrast(150%);
 }
 
-.card__container {
+.card__container_text {
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 27px;
   margin-inline: 25px;
   margin-block: 25px;
   font-size: 18px;
 }
 
-.filter_sepia {
+.filter__sepia {
   filter: sepia(1.1);
 }
 
-.filter_invert {
+.filter__invert {
   filter: invert(90%);
 }
 
-.filter_saturate {
+.filter__saturate {
   filter: saturate(120%);
 }
 
-.filter_blur {
+.filter__blur {
   filter: blur(2px);
 }
 
-.filter_grayscale {
+.filter__grayscale {
   filter: grayscale(80%);
 }
 
-.filter_saturate_contrast {
+.filter__saturate__contrast {
   filter: saturate(150%) contrast(120%);
 }
 
 .card__button {
   display: flex;
-  gap: 15px;
+  margin-block: 25px;
+  margin-inline-end: 25px;
+  gap: 10px;
   align-items: center;
   justify-content: end;
 }
@@ -233,85 +235,12 @@
   background-color: transparent;
 }
 
-.card__icon-button:focus {
-  outline: none;
-}
-
-.card__icon-button:focus-visible {
-  border: 2px solid var(--accent-color);
-  transition: 0.3s ease;
-}
-
 .sparks {
   opacity: 0;
 }
 
-.like-icon:hover .core {
-  fill: var(--color-heart);
-  transition: fill 0.3s;
-
-}
-
-.like-icon:hover .main-body {
-  fill: var(--color-heart);
-  transition: fill 0.3s 0.03s;
-}
-
-.like-icon:active .core {
-  fill: var(--bg-heart);
-  transition: fill 0.3s;
-}
-
-.like-icon:active .main-body {
-  fill: var(--bg-heart);
-  transition: fill 0.3s 0.03s;
-}
-
-.like-icon.is-liked .core {
-  fill: var(--bg-heart);
-  transition: fill 0.3s;
-}
-
-.like-icon.is-liked .main-body {
-  fill: var(--bg-heart);
-  transition: fill 0.3s 0.03s;
-}
-
-.like-icon.is-liked .contour {
-  fill: var(--bg-heart);
-  transition: fill 0.3s 0.06s;
-}
-
-.like-icon .contour {
-  fill: var(--color-heart);
-  transition: fill 0.1s linear;
-}
-
-.like-icon.is-liked .heart {
-  animation: like 0.3s ease-in alternate 0.1s;
-  transform-origin: center;
-}
-
-@keyframes like {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(1.5);
-  }
-}
-
-.like-icon.is-liked .sparks {
-  animation: non-opacity 0.3s ease-in alternate 0.3s;
-}
-
-@keyframes non-opacity {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+.card__icon-button:focus {
+  outline: none;
 }
 
 .button {
@@ -348,7 +277,6 @@
 
 .card__like-button {
   inline-size: 130px;
-  block-size: 38px;
   padding: 9px 17px;
   gap: 10px;
 }
@@ -365,9 +293,10 @@
 .footer__button {
   gap: 8px;
   inline-size: clamp(19.125rem, 18.4868rem + 2.723vw, 20.9375rem);
-  block-size: 51px;
   margin-inline: auto;
   margin-block: 54px 105px;
+  padding: 15px 20px;
+  white-space: nowrap;
 }
 
 .floppy {
@@ -381,13 +310,18 @@
 
 .dialog {
   position: fixed;
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-template-rows: 1fr min-content;
+  row-gap: 30px;
+  column-gap: 20px;
   background-color: var(--bg-color);
   border: 2px solid var(--accent-color);
   text-transform: uppercase;
   line-height: 150%;
-  padding: 32px 42px;
-  inline-size: 341px;
-  block-size: 195px;
+  padding-block: 30px;
+  padding-inline: 40px;
+  inline-size: clamp(21.3125rem, 20.9604rem + 1.5023vw, 22.3125rem);
 }
 
 .dialog::backdrop {
@@ -395,22 +329,16 @@
   opacity: 0.75;
 }
 
+dialog:not([open]) {
+  opacity: 0;
+  pointer-events: none;
+}
+
 .dialog__button {
-  inline-size: 257px;
-  block-size: 38px;
   padding: 9px 17px;
   gap: 10px;
   color: var(--accent-color);
   grid-column: span 2;
- 
-}
-
-.dialog[open] {
-  display: grid;
-  grid-template-columns: min-content 1fr;
-  grid-template-rows: 1fr min-content;
-  row-gap: 30px;
-  column-gap: 20px;
 }
 
 .dialog .floppy  {
@@ -420,10 +348,12 @@
 }
 
 @media (width <= 768px) {
+  .dialog {
+    padding-inline: 30px;
+  }
 
   .footer__button {
     flex-direction: column;
-    block-size: 80px;
   }
 
   .floppy {
