--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,6 +8,7 @@
     --gr-color: #d3d3d3;
     --gr-color-medium: #e7e7e7;
     --gr-color-dark: #1a1a1a;
+    --gr-direction: to top;
     --accent-color: #000;
     --color-shadow: #E7E7E7;
     --color-text: #FFF;
