--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,11 +8,11 @@
     --gr-color: #d3d3d3;
     --gr-color-medium: #e7e7e7;
     --gr-color-dark: #1a1a1a;
-    --gr-direction: to top;
     --accent-color: #000;
     --color-shadow: #E7E7E7;
     --color-text: #FFF;
     --color-heart: #000;
     --bg-heart: #FF0000;
     --color-floppy: #FFF;
+    --dialog-text: #000;
 }
