--- a/styles/themes.css
+++ b/styles/themes.css
@@ -14,13 +14,13 @@
     --gr-color: #d3d3d3;
     --gr-color-medium: #e7e7e7;
     --gr-color-dark: #1a1a1a;
-    --gr-direction: to top;
     --accent-color: #000;
     --color-shadow: #E7E7E7;
     --color-text: #FFF;
     --color-heart: #000;
     --bg-heart: #FF0000;
     --color-floppy: #FFF;
+    --dialog-text: #000;
 }
 
 :root.theme-dark {
@@ -32,12 +32,12 @@
     --gr-color: #000;
     --gr-color-medium: #007f0c;
     --gr-color-dark: #004306;
-    --gr-direction: to bottom;
     --accent-color: #00CC14;
     --color-shadow: #000;
     --color-text: #00CC14;
     --color-heart: #00CC14;
     --color-floppy: #00CC14;
+    --dialog-text: #00CC14;
 
 }
 
@@ -51,11 +51,11 @@
         --gr-color: #000;
         --gr-color-medium: #007f0c;
         --gr-color-dark: #004306;
-        --gr-direction: to bottom;
         --accent-color: #00CC14;
         --color-shadow: #000;
         --color-text: #00CC14;
         --color-heart: #00CC14;
         --color-floppy: #00CC14;
+        --dialog-text: #00CC14;
     }
 }
