--- a/styles/themes.css
+++ b/styles/themes.css
@@ -11,9 +11,9 @@
     --text-weight: 400;
     --title-weight: 700;
     --bg-color: #FFF;
-    --gr-color: #d3d3d3;
-    --gr-color-medium: #e7e7e7;
-    --gr-color-dark: #1a1a1a;
+    --bg-image: repeating-linear-gradient(90deg, #d3d3d3 0 2px, transparent 2px 4px),
+                repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+                linear-gradient(to bottom, #e7e7e7 0 0.01%, #1a1a1a);
     --accent-color: #000;
     --color-shadow: #E7E7E7;
     --color-text: #FFF;
@@ -29,16 +29,15 @@
     --text-weight: 465;
     --title-weight: 785;
     --bg-color: #000;
-    --gr-color: #000;
-    --gr-color-medium: #007f0c;
-    --gr-color-dark: #004306;
+    --bg-image: repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
+                repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+                linear-gradient(to bottom, #007f0c, #004306);
     --accent-color: #00CC14;
     --color-shadow: #000;
     --color-text: #00CC14;
     --color-heart: #00CC14;
     --color-floppy: #00CC14;
     --dialog-text: #00CC14;
-
 }
 
 @media (prefers-color-scheme: dark) {
@@ -48,9 +47,9 @@
         --text-weight: 465;
         --title-weight: 785;
         --bg-color: #000;
-        --gr-color: #000;
-        --gr-color-medium: #007f0c;
-        --gr-color-dark: #004306;
+        --bg-image: repeating-linear-gradient(90deg, #000 0 2px, transparent 2px 4px),
+                    repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+                    linear-gradient(to bottom, #007f0c, #004306);
         --accent-color: #00CC14;
         --color-shadow: #000;
         --color-text: #00CC14;
