--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,9 +5,9 @@
     --text-weight: 400;
     --title-weight: 700;
     --bg-color: #FFF;
-    --gr-color: #d3d3d3;
-    --gr-color-medium: #e7e7e7;
-    --gr-color-dark: #1a1a1a;
+    --bg-image: repeating-linear-gradient(90deg, #d3d3d3 0 2px, transparent 2px 4px),
+                repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+                linear-gradient(to bottom, #e7e7e7 0 0.01%, #1a1a1a);
     --accent-color: #000;
     --color-shadow: #E7E7E7;
     --color-text: #FFF;
